# python_baptise

./: .gitignore  closure_decorator.py  csvfiles.py  dates_time.py  funcs.py  graphing.py  iter_tools.py  named_tupple.py  numbers_in_python.py  numpy_pandas.py  oop.py  pyproject.toml  random_nums.py  switch_statement.py
