[tool.poetry]
name = "brklearnspython"
version = "0.1.0"
description = ""
authors = ["bharathkreddy <reddybharath.k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
pandas = "^2.1.4"
numpy = "^1.26.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
